# itu-sdse-project

./: README.md  requirements.txt
.dvc/: config
99Problems/: Makefile  README.md  pyproject.toml  requirements.txt
99Problems/.github/workflows/: pipeline.yml
99Problems/Module1/: __init__.py  pipeline.go  plots.py
99Problems/Module1/.dvc/: config
99Problems/Module1/artifacts/: 12_data_drift.py
99Problems/Module1/config/: config.py
99Problems/Module1/data/: 1_4_load.py  5_feature_selection.py  6_7_8_9_clean_separate.py  7_create_&_separate.py  clean(6,8,9).py  dataset.py  features.py
99Problems/Module1/modeling/: predict.py  train.py
99Problems/Module1/modeling/config/: config.py
99Problems/Module1/modeling/src/: 10_11_13_14_combine_bin_save.py  5_feature_selection.py  train.py  utils.py
99Problems/Module1/src/: 01_load.py  02_feature_selection.py  03_clean_separate.py  04_combine_bin_save.py  05_train.py  06_model_selection.py  07_deploy.py  utils.py
99Problems/dagger/: go.mod  pipeline.go
99Problems/dagger/artifacts/: 03_data_clean_seperate.csv  model_results.json  training_data.csv
99Problems/dagger/models/: lead_model_xgboost.json  model_results.json  scaler.pkl
99Problems/docs/docs/: index.md
dagger/: pipeline.go
data/: raw_data.csv.dvc
model/: lead_model_lr.pkl  lead_model_xgboost.json  model.pkl  model_results.json  pkl_check.py
src/: 01_load.py  02_feature_selection.py  03_clean_separate.py  04_combine_bin_save.py  05_train.py  06_model_selection.py  07_deploy.py  test_utils.py  utils.py
tests/: test_utils.py
(+287 files in other folders)
